--- a/package.json
+++ b/package.json
@@ -11,9 +11,13 @@
   "dependencies": {
     "@headlessui/react": "^1.7.11",
     "@heroicons/react": "^2.0.15",
+    "@ionic/react": "^6.6.0",
     "heroicons": "^2.0.15",
+    "ionicons": "^6.1.3",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-icons": "^4.8.0",
+    "react-ionicons": "^4.2.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.27",
